<package format="2">
  <name>rotors_description</name>
  <version>0.0.1</version>
  <description>The rotors_description package provides URDF models of the AscTec multicopters.</description>

  <maintainer email="giuseppe.silano@unisannio.it">Giuseppe Silano</maintainer>

  <author>Fadri Furrer</author>
  <author>Michael Burri</author>
  <author>Mina Kamel</author>
  <author>Janosch Nikolic</author>
  <author>Markus Achtelik</author>
  <author>Giuseppe Silano</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/GRACE-GROUP/rotors_simulator</url>
  <url type="bugtracker">https://github.com/GRACE-GROUP/rotors_simulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>
