<package format="2">
  <name>rqt_rotors</name>
  <version>0.0.1</version>
  <description>The rqt_rotors package</description>

  <maintainer email="giuseppe.silano@unisannio.it">Giuseppe Silano</maintainer>

  <author>Pavel Vechersky</author>
  <author>Giuseppe Silano</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/GRACE-GROUP/rotors_simulator</url>
  <url type="bugtracker">https://github.com/GRACE-GROUP/rotors_simulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mavros_msgs</depend>
  <depend>rospy</depend>
  <depend>rqt_gui_py</depend>
  <depend>rqt_gui</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
